[build-system]
requires      = ["setuptools>=55.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-stats node exporter"
version = "0.0.1"
description = "Export jetson device stats to your prometheus server."
readme = "README.md"
authors = [{ name = "Real Python", email = "info@realpython.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "jetson-stats==3.1.4",
    "schedule==1.1.0",
    "prometheus-client==0.15.0",
    "psutil==5.9.4",
    'tomli; python_version < "3.7"'
]

# This project has only been tested on Nvidia Jetson Nano Running Ubuntu 18.04 & Jetpack 4.6
requires-python = "<3.7"

[project.urls]
Homepage = "https://github.com/laminair/jetson_prometheus_exporter"

[project.scripts]
jetson_stats_node_exporter = "jetson_stats_node_exporter.__main__:start_exporter"
