[project]
name = "jetson-stats-node-exporter"
version = "0.1.3"
description = "Prometheus Node Exporter for Nvidia Jetson Devices running Jetson Stats (now including AGX Orin with JetPack 6.0)"
readme = "README.md"
authors = [{ name = "Herbert Woisetschläger", email = "herbert.woisetschlaeger@tum.de"}]

requires-python = ">=3.10"
dependencies = [
    "jetson-stats==4.3.2",
    "schedule==0.6.0",
    "prometheus-client==0.21.1",
    "psutil",
]

classifiers=[
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: System :: Monitoring"
]
